--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -11,59 +12,57 @@
     <title>Pelote Basque</title>
   </head>
   <body>
-    <div class="box-white text-center">
-      <img src="images/peiofinal.jpg" alt="profile" id= "peio">
-      <h1>Peio Guichandut</h1>
-      <h2>Joueur professionnel de pelote basque</h2>
-      <p>Je profite de cette opportunité pour vous faire découvrir un sport vraiment atypique : <strong>la pelote basque</strong>. La pelote basque a pour origine le jeu de paume qui se pratiquait depuis le Moyen-Age. Mais depuis, le sport a beaucoup évolué et de nombreuses disciplines sont nées.
-      Cette page a pour objet de vous présenter les <strong>différents terrains</strong> sur lequel un pilotari (=joueur de pelote basque) évolue.</p>
-    </div>
-    <div class="box-white text-center">
-      <ul class="list-inline">
-        <li><a href="#"><i class="fab fa-facebook-f"></i>  Facebook</a></li>
-        <li><a href="#"><i class="fab fa-linkedin-in"></i>  LinkedIn</a></li>
-        <li><a href="#"><i class="fab fa-twitter"></i>  Twitter</a></li>
-      </ul>
-    </div>
+    <div id="main">
+      <div class="box-white text-center">
+        <img src="images/peiofinal.jpg" alt="profile" id= "peio">
+        <h1>Peio Guichandut</h1>
+        <h2>Joueur professionnel de pelote basque</h2>
+        <p>Je profite de cette opportunité pour vous faire découvrir un sport vraiment atypique : <strong>la pelote basque</strong>. La pelote basque a pour origine le jeu de paume qui se pratiquait depuis le Moyen-Age. Mais depuis, le sport a beaucoup évolué et de nombreuses disciplines sont nées. <br>
+        Cette page a pour objet de vous présenter les <strong>différents terrains</strong> sur lequel un pilotari (=joueur de pelote basque) évolue.</p>
+      </div>
+      <div class="box-white text-center">
+        <ul class="list-inline">
+          <a href="#"><i class="fab fa-facebook-f"></i>  Facebook</a>
+          <a href="#"><i class="fab fa-linkedin-in"></i>  LinkedIn</a>
+          <a href="#"><i class="fab fa-twitter"></i>  Twitter</a>
+           <iframe width="600" height="220" src="https://www.youtube.com/embed/3c-vHSyHU2Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </ul>
+      </div>
 
+      <div class="box-white text-center">
+        <h2>Les différents terrains de jeu :</h2>
+        <table>
+          <tbody>
+            <td>
+              <tr><img src="images/fronton.jpg" alt="fronton"></tr>
+              <tr>
+                <h3>Le fronton</h3>
+                <p>Le fronton, aussi appelé "Plaza" en Euskara, est souvent situé au coeur des petits villages. C'est durant la saison estivale que les pilotaris (=joueurs de pelote) s'affrontent dans des parties de 30 points gagnants.</p>
+              </tr>
+              <tr><img src="images/mur-a-gauche.png" alt="mur_a_gauche"></tr>
+              <tr>
+                <h3>Le mur à gauche</h3>
+                <p>Le mur à gauche, aussi appelé "Ezker pareta" en Euskara, est un fronton dans une structure fermée mais, comme son nom l'indique, avec un mur du côté gauche. Les compétitions en mur à gauche se pratiquent généralement du côté basque espagnol. Les parties durent 22 points. </p>
+              </tr>
+              <tr><img src="images/Trinquet-main-nue.jpg" alt="Trinquet_main_nue"></tr>
+              <tr>
+                <h3>Le trinquet</h3>
+                <p>Le trinquet, aussi appelé "Trinketa" en Euskara, est dispose de règles beaucoup plus complexes. C'est durant la saison hivernale que les pilotaris (=joueurs de pelote) s'affrontent dans des parties de 40 points gagnants.</p>
+              </tr>
+            </td>
+          </tbody>
+        </table>
+      </div>
 
-    <div class="box-white text-center">
-      <h2>Les différents terrains de jeu :</h2>
-      <table>
-        <tbody>
-          <td>
-            <tr><img src="images/fronton.jpg" alt="fronton"></tr>
-            <tr>
-              <h3>Le fronton</h3>
-              <p>Le fronton, aussi appelé "Plaza" en Euskara, est souvent situé au coeur des petits villages. C'est durant la saison estivale que les pilotaris (=joueurs de pelote) s'affrontent dans des parties de 30 points gagnants.</p>
-            </tr>
-            <tr><img src="images/mur-a-gauche.png" alt="mur_a_gauche"></tr>
-            <tr>
-              <h3>Le mur à gauche</h3>
-              <p>Le mur à gauche, aussi appelé "Ezker pareta" en Euskara, est un fronton dans une structure fermée mais, comme son nom l'indique, avec un mur du côté gauche. Les compétitions en mur à gauche se pratiquent généralement du côté basque espagnol. Les parties durent 22 points. </p>
-            </tr>
-            <tr><img src="images/Trinquet-main-nue.jpg" alt="Trinquet_main_nue"></tr>
-            <tr>
-              <h3>Le trinquet</h3>
-              <p>Le trinquet, aussi appelé "Trinketa" en Euskara, est dispose de règles beaucoup plus complexes. C'est durant la saison hivernale que les pilotaris (=joueurs de pelote) s'affrontent dans des parties de 40 points gagnants.</p>
-            </tr>
-          </td>
-        </tbody>
-      </table>
-    </div>
-
-    <div class="box-white text-center">
-      <h2>Pour en savoir plus</h2>
-      <p>La pelote basque a été classé comme le sport le plus glamour en 2018 selon <a href="http://shockchan.com/2-girls-1-cup-video/">l'Equipe21</a>. Lisez l'article pour en savoir plus.</p>
-      <ul class="list-inline">
-        <li><a href="#"><i class="fas fa-heart"></i></a></li>
-        <li><a href="#"><i class="fas fa-share"></i></a></li>
-        <li><a href="#"><i class="fas fa-star"></i></a></li>
-      </ul>
+      <div class="box-white text-center">
+        <h2>Pour en savoir plus</h2>
+        <p>Pour en savoir plus sur Peio Guichandut, joueur professionnel, lisez la fiche suivante : <a href="http://eskupilota.org/pilotari/peio-guichandut/">Esku Pilota</a></p>
+        <ul class="list-inline">
+          <li><a href="#"><i class="fas fa-heart"></i></a></li>
+          <li><a href="#"><i class="fas fa-share"></i></a></li>
+          <li><a href="#"><i class="fas fa-star"></i></a></li>
+        </ul>
+      </div>
     </div>
   </body>
 </html>
-
-  </body>
-</html>
-
